--- a/index.html
+++ b/index.html
@@ -124,15 +124,15 @@
 
             <h6>Hésitez pas à me contacter !</h6>
             <section class="contacts">
-                <div class="contact1"><button id="contact1" class="contact">✉️Adresse-mail</button>
+                <div class="contact1"><button id="contact1" class="contact">✉️&nbsp; Adresse-mail</button>
                     <p class="adressemail">selvibekar28@gmail.com</p>
                 </div>
 
-                <div class="contact2"><button id="contact2" class="contact">📞 Numéro</button>
+                <div class="contact2"><button id="contact2" class="contact">📞&nbsp;  Numéro</button>
                     <p class="numéro">06.84.29.29.91</p>
                 </div>
 
-                <div class="contact3"><button id="contact3" class="contact">💻Discord</button>
+                <div class="contact3"><button id="contact3" class="contact">💻&nbsp; Discord</button>
                     <p class="discord">selvibk</p>
                 </div>
             </section>
